--- a/css/responsive.css
+++ b/css/responsive.css
@@ -36,10 +36,11 @@
     margin-left: -60px;
   }
   .effect-4 {
-    left: 15%;
+    left: 9%;
   }
   .effect-5 {
-    right: 4%;
+    top: 50%;
+    right: 8%;
   }
   .about-section .about-img {
     padding-bottom: 30px;
